monitoring/prometheus-stack/cilium-netpols/egress-to-argocd-metrics.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: egress-to-argocd-metrics
spec:
  description: >
    Allow egress to ArgoCD namespace for monitoring ArgoCD components.
  endpointSelector:
    matchLabels:
      netpol.cilium.io/egress-to-argocd-metrics: "true"

  egress:
    - toEndpoints:
        - matchLabels:
            k8s:app.kubernetes.io/component: application-controller
            k8s:io.kubernetes.pod.namespace: argocd
      toPorts:
        - ports:
            - port: "8082"
              protocol: TCP

    - toEndpoints:
        - matchLabels:
            k8s:app.kubernetes.io/component: applicationset-controller
            k8s:io.kubernetes.pod.namespace: argocd
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP

    - toEndpoints:
        - matchLabels:
            k8s:app.kubernetes.io/component: server
            k8s:io.kubernetes.pod.namespace: argocd
      toPorts:
        - ports:
            - port: "8083"
              protocol: TCP

    - toEndpoints:
        - matchLabels:
            k8s:app.kubernetes.io/component: repo-server
            k8s:io.kubernetes.pod.namespace: argocd
      toPorts:
        - ports:
            - port: "8084"
              protocol: TCP

    - toEndpoints:
        - matchLabels:
            k8s:app.kubernetes.io/component: redis
            k8s:io.kubernetes.pod.namespace: argocd
      toPorts:
        - ports:
            - port: "9121"
              protocol: TCP
