monitoring/prometheus-stack/cilium-netpols/egress-to-tailscale-node-metrics.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: egress-to-tailscale-node-metrics
spec:
  description: Allow egress to Tailscale node for node metrics scraping.
  endpointSelector:
    matchLabels:
      netpol.cilium.io/egress-to-tailscale-node-metrics: "true"

  egress:
    - toCIDR:
        - 10.10.20.50/32
      toPorts:
        - ports:
            - port: "5252"
              protocol: TCP
